# HarmonySASE_Testrail_MCP

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  USER_GUIDE.md  install.ps1  install.sh  mcp_config_example.json  pyproject.toml
docs/: RELEASE_CHECKLIST.md  RELEASE_NOTES_2.0.0.md
docs/decisions/: ADR-001-wizard-installer.md  ADR-002-python-harness-adaptation.md  ADR-003-testrail-core-extraction.md
docs/plans/: plan-001-wizard-installer.md  plan-002-python-harness-adaptation.md  plan-003-wizard-robustness.md  plan-004-testrail-mcp-v2.md
src/: __init__.py  installer.py  stdio.py
src/client/: __init__.py
src/client/api/: __init__.py  attachments.py  base_client.py  case_fields.py  cases.py  configs.py  exceptions.py  milestones.py  plans.py  projects.py  results.py  runs.py  sections.py  statuses.py  suites.py  tests.py  users.py
src/server/: __init__.py
src/server/api/: __init__.py  access_control.py  aliases.py  attachments.py  cache_preload.py  case_fields.py  case_type_cache.py  cases.py  configs.py  field_cache.py  health.py  metrics.py  milestones.py  plans.py  priority_cache.py  projects.py  rate_limiter.py  results.py  runs.py  sections.py  status_cache.py  statuses.py  suites.py  tests.py  tools.py  users.py  utils.py
src/shared/: __init__.py
src/shared/schemas/: __init__.py  attachments.py  case_fields.py  cases.py  common.py  configs.py  milestones.py  plans.py  projects.py  results.py  runs.py  sections.py  statuses.py  suites.py  tests.py  users.py
tests/: conftest.py  test_aliases.py  test_allowlist.py  test_installer.py  test_preload_cache.py  test_read_only.py
