[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testrail-mcp"
version = "2.0.0"
description = "MCP server connecting AI assistants to TestRail - 15 consolidated tools with attachment support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "TestRail MCP Contributors" }]
keywords = ["testrail", "mcp", "testing", "qa", "model-context-protocol", "check-point", "harmony-sase"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
testrail-mcp = "src.stdio:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]
