[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harmonysase-testrail-mcp"
version = "2.0.0"
description = "MCP server connecting AI assistants to TestRail - 15 consolidated tools with attachment support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Eden Fridman" }]
keywords = ["testrail", "mcp", "testing", "qa", "model-context-protocol", "check-point", "harmony-sase"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=1.11",
]

[project.scripts]
testrail-mcp = "src.stdio:run"
testrail-mcp-install = "src.installer:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
strict = false
