[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testrail-mcp"
version = "2.0.0"
description = "MCP server connecting AI assistants to TestRail - 15 consolidated tools with attachment support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "TestRail MCP Contributors" }]
keywords = ["testrail", "mcp", "testing", "qa", "model-context-protocol", "check-point", "harmony-sase"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=1.11",
]

[project.scripts]
testrail-mcp = "src.stdio:run"
testrail-mcp-install = "src.installer:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# uv workspace declaration (plan-004 phase 5).
# The root project keeps shipping `testrail-mcp` from `src/` until phase 5
# finishes migrating code into the per-package layouts under `packages/`.
# Members are pre-release skeletons (version 0.1.0-pre) for now.
[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
strict = false
# packages/testrail-{core,mcp}/tests/ are sibling test trees inside the uv
# workspace. Without explicit_package_bases, mypy reports "Duplicate module
# named 'tests'" when scanning the whole repo. Each package owns its own
# tests namespace; treating them as namespace packages keeps mypy happy.
explicit_package_bases = true
namespace_packages = true
